--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
 <meta charset="UTF-8" />
 <title>🍜 POS หน้าร้าน</title>
+<link rel="icon" href="data:,">
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+
 </head>
 
 <body class="bg-slate-900 text-white min-h-screen p-4">
