--- a/kitchen.html
+++ b/kitchen.html
@@ -1,75 +1,159 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>🍳 ครัว</title>
+<meta charset="UTF-8" />
+<title>👨‍🍳 Kitchen Display</title>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script src="https://cdn.tailwindcss.com"></script>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+<link rel="icon" href="data:,">
 </head>
 
-<body class="bg-slate-900 text-white p-4">
+<body class="bg-slate-900 text-white min-h-screen p-4">
 
-<h1 class="text-2xl font-bold text-center mb-4">🍳 ครัว</h1>
+<!-- เสียงแจ้งเตือน -->
+<audio id="dingSound" src="https://actions.google.com/sounds/v1/alarms/beep_short.ogg"></audio>
 
-<div id="orderList" class="space-y-4"></div>
+<div class="max-w-6xl mx-auto">
+  <h1 class="text-2xl font-bold mb-4">👨‍🍳 หน้าครัว</h1>
+
+  <div id="orderList" class="space-y-4"></div>
+</div>
 
 <script>
-const SUPABASE_URL = "https://nvsptbbvxjulrpdebrhn.supabase.co";
-const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im52c3B0YmJ2eGp1bHJwZGVicmhuIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc2MTc1NTAsImV4cCI6MjA4MzE5MzU1MH0.sQ8XqdAKCsaxWupP3QZjFOraEHyW8agSo3c3BR3I8ss";
-const db = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+/* ================= CONFIG ================= */
+const SUPABASE_URL = "https://nvsptbbvxjulrpdebrhn.supabase.co"
+const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im52c3B0YmJ2eGp1bHJwZGVicmhuIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc2MTc1NTAsImV4cCI6MjA4MzE5MzU1MH0.sQ8XqdAKCsaxWupP3QZjFOraEHyW8agSo3c3BR3I8ss"
+const sb = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY)
 
-/* ================= LOAD ================= */
-async function loadOrders(){
-  const { data } = await db
-    .from('orders')
+/* ================= STATE ================= */
+const orderList = document.getElementById("orderList")
+const ding = document.getElementById("dingSound")
+let knownItemIds = new Set()
+
+/* ================= LOAD ORDERS ================= */
+async function loadOrders(playSound = false) {
+  const { data, error } = await sb
+    .from("order_items")
     .select(`
       id,
-      created_at,
-      tables(name),
-      order_items(product_name,qty)
+      qty,
+      price,
+      option_special,
+      option_mix,
+      mix_sauce_id,
+      status,
+      products(name),
+      orders(id, table_id, tables(table_no))
     `)
-    .eq('status','open')
-    .order('created_at',{ascending:true});
+    .eq("status", "pending")
+    .order("id", { ascending: true })
 
-  orderList.innerHTML='';
+  if (error) return
 
-  if(!data || !data.length){
-    orderList.innerHTML = `<div class="text-center text-slate-400">ไม่มีออเดอร์</div>`;
-    return;
-  }
+  orderList.innerHTML = ""
 
-  data.forEach(o=>{
-    orderList.innerHTML+=`
-      <div class="bg-slate-800 p-4 rounded">
-        <div class="flex justify-between mb-2">
-          <b>โต๊ะ ${o.tables?.name}</b>
-          <span>${new Date(o.created_at).toLocaleTimeString('th-TH')}</span>
+  let hasNew = false
+
+  data.forEach(item => {
+    if (!knownItemIds.has(item.id)) {
+      knownItemIds.add(item.id)
+      hasNew = true
+    }
+
+    const mixName = item.mix_sauce_id
+      ? item.products && item.mix_sauce_id
+        ? item.mix_sauce_id
+        : ""
+      : ""
+
+    const card = document.createElement("div")
+    card.className = "bg-slate-800 p-4 rounded-xl border border-slate-700"
+
+    card.innerHTML = `
+      <div class="flex justify-between items-center mb-2">
+        <div class="font-bold text-lg">
+          🍽️ โต๊ะ ${item.orders.tables.table_no}
         </div>
-        ${o.order_items.map(i=>`
-          <div class="flex justify-between text-sm">
-            <span>${i.product_name}</span>
-            <span>x${i.qty}</span>
-          </div>
-        `).join('')}
+        <button class="doneBtn bg-green-600 px-4 py-1 rounded">
+          ✅ ทำเสร็จแล้ว
+        </button>
       </div>
-    `;
-  });
+
+      <div class="text-xl font-bold">
+        ${item.products.name}
+        ${item.option_special ? "(พิเศษ)" : ""}
+        ${item.option_mix ? "(ผสม)" : ""}
+      </div>
+
+      <div class="text-sm text-gray-300 mt-1">
+        จำนวน: <b>${item.qty}</b> ที่
+      </div>
+    `
+
+    card.querySelector(".doneBtn").onclick = async () => {
+      const confirm = await Swal.fire({
+        title: "ยืนยันทำเสร็จแล้ว?",
+        text: `${item.products.name} x ${item.qty}`,
+        icon: "question",
+        showCancelButton: true,
+        confirmButtonText: "เสร็จแล้ว",
+        cancelButtonText: "ยัง"
+      })
+
+      if (!confirm.isConfirmed) return
+
+      await sb
+        .from("order_items")
+        .update({ status: "done" })
+        .eq("id", item.id)
+
+      Swal.fire({
+        toast: true,
+        position: "top-end",
+        icon: "success",
+        title: "รับทราบแล้ว",
+        showConfirmButton: false,
+        timer: 1200
+      })
+
+      loadOrders()
+    }
+
+    orderList.appendChild(card)
+  })
+
+  if (playSound && hasNew) {
+    ding.currentTime = 0
+    ding.play()
+  }
 }
 
 /* ================= REALTIME ================= */
-db.channel('kitchen-live')
-  .on('broadcast',{event:'new_order'},()=>loadOrders())
-  .on('postgres_changes',
-    { event:'*', schema:'public', table:'orders' },
-    ()=>loadOrders()
+sb.channel("kitchen-realtime")
+  .on(
+    "postgres_changes",
+    { event: "INSERT", schema: "public", table: "order_items" },
+    payload => {
+      if (payload.new.status === "pending") {
+        loadOrders(true)
+      }
+    }
   )
-  .subscribe();
+  .on(
+    "postgres_changes",
+    { event: "UPDATE", schema: "public", table: "order_items" },
+    payload => {
+      loadOrders()
+    }
+  )
+  .subscribe()
 
-/* ================= START ================= */
-loadOrders();
+/* ================= INIT ================= */
+loadOrders()
 </script>
 
 </body>
